add exam 2 info

--- a/index.html
+++ b/index.html
@@ -1051,7 +1051,9 @@
                 <li><a href="lab/Lab7_3011_F22.pdf">Lab 7 Handout</a></li>
               </ol>
             </td>
-            <td></td>
+            <td>
+              HW 6 Solution <b><font color="green">out</font></b>
+            </td>
             <td></td>
             </tr>
 
@@ -1071,8 +1073,28 @@
                 <li>Textbook p669-684</li>
               </ol>
             </td>
+            <td>
+              <a href="materials/Exam2_Info_3011_F22.pdf">Exam 2 Information</a> <b><font color="green">out</font></b>
+            </td>
             <td></td>
+          </tr>
+
+          <tr>
+            <td>Fri Nov 11</td>
+            <td>
+              Exam 2 Review
+            </td>
+        
+            <td>
+              Suggested Readings:
+              <ol>
+                <li><a href="materials/Exam2_Info_3011_F22.pdf">Exam 2 Information</a></li>
+              </ol>
+            </td>
             <td></td>
+            <td>
+              HW 7 <b><font color="red">due on Sunday</font></b>
+            </td>
           </tr>
   </tbody>
 </table>
