update on Nov 14

--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,9 @@
                 <li><a href="materials/Exam2_Info_3011_F22.pdf">Exam 2 Information</a></li>
               </ol>
             </td>
-            <td></td>
+            <td>
+              HW 6 Grade <b><font color="green">out</font></b>
+            </td>
             <td></td>
           </tr>
 
@@ -1123,7 +1125,9 @@
                 <li><a href="materials/old_exams.zip">Old Exams</a></li>
               </ol>
             </td>
-            <td></td>
+            <td>
+              HW 7 Solution <b><font color="green">out</font></b>
+            </td>
             <td></td>
             </tr>
           
