--- a/index.html
+++ b/index.html
@@ -1159,6 +1159,16 @@
               <td></td>
               </tr>
 
+              <tr>
+                <td>Fri Nov 18</td>
+                <td>
+                  Class Canceled
+                </td>
+            
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
   </tbody>
 </table>
 </div> 
