--- a/index.html
+++ b/index.html
@@ -1193,7 +1193,9 @@
                     <li>Textbook p516-530, p537-541</li>
                   </ol>
                 </td>
-                <td></td>
+                <td>
+                  HW 7 Grade <b><font color="green">out</font></b>
+                </td>
                 <td></td>
               </tr>
 
