--- a/index.html
+++ b/index.html
@@ -1195,6 +1195,9 @@
                 </td>
                 <td>
                   HW 7 Grade <b><font color="green">out</font></b>
+                  <br>
+                  <br>
+                  Student Rating of Teaching <b><font color="green">open</font></b>
                 </td>
                 <td></td>
               </tr>
