--- a/index.html
+++ b/index.html
@@ -1218,7 +1218,9 @@
                   </td>
               
                   <td></td>
-                  <td></td>
+                  <td>
+                    <a href="homework/HW8Problems.pdf">HW 8</a> <b><font color="green">out</font></b>
+                  </td>
                   <td></td>
                 </tr>
 
