add lab8; update chapter 12

--- a/index.html
+++ b/index.html
@@ -1263,6 +1263,40 @@
                   <td></td>
                   <td></td>
                 </tr>
+
+                <tr class="warning">
+                  <td>Tue Nov 29</td>
+                  <td>Lab 8</td>
+                  <td>
+                    Suggested Readings:
+                    <ol>
+                      <li><a href="lab/Lab8_3011_F22.pdf">Lab 8 Handout</a></li>
+                    </ol>
+                  </td>
+                  <td></td>
+                  <td></td>
+                  </tr>
+
+                <tr>
+                  <td>Wed Nov 30</td>
+                  <td>
+                    Chapter 12: Regression Analysis
+                    <br>
+                    [<a href="slides/Chapter12.pdf">slides</a>]
+                    [<a href="code/chapter12.R">code</a>]
+                    
+                  </td>
+              
+                  <td>
+                    Suggested Readings:
+                    <ol>
+                      <li>Handout Chapter 12</li>
+                      <li>Textbook p569-582</li>
+                    </ol>
+                  </td>
+                  <td></td>
+                  <td></td>
+                </tr>
   </tbody>
 </table>
 </div> 
