update chapter 12 on Nov 30

--- a/index.html
+++ b/index.html
@@ -1297,6 +1297,29 @@
                   <td></td>
                   <td></td>
                 </tr>
+
+                <tr>
+                  <td>Fri Dec 2</td>
+                  <td>
+                    Chapter 12: Regression Analysis
+                    <br>
+                    [<a href="slides/Chapter12.pdf">slides</a>]
+                    [<a href="code/chapter12.R">code</a>]
+                    
+                  </td>
+              
+                  <td>
+                    Suggested Readings:
+                    <ol>
+                      <li>Handout Chapter 12</li>
+                      <li>Textbook p569-582</li>
+                    </ol>
+                  </td>
+                  <td></td>
+                  <td>
+                    HW 8 <b><font color="red">due on Sunday</font></b>
+                  </td>
+                </tr>
   </tbody>
 </table>
 </div> 
