--- a/index.html
+++ b/index.html
@@ -1315,10 +1315,34 @@
                       <li>Textbook p569-582</li>
                     </ol>
                   </td>
-                  <td></td>
+                  <td>
+                    <a href="homework/HW9Problems.pdf">HW 9</a> <b><font color="green">out</font></b>
+                  </td>
                   <td>
                     HW 8 <b><font color="red">due on Sunday</font></b>
                   </td>
+                </tr>
+
+                <tr>
+                  <td>Mon Dec 5</td>
+                  <td>
+                    Chapter 12: Regression Analysis
+                    <br>
+                    [<a href="slides/Chapter12.pdf">slides</a>]
+                    [<a href="code/chapter12.R">code</a>]
+                    
+                  </td>
+              
+                  <td>
+                    Suggested Readings:
+                    <ol>
+                      <li>Handout Chapter 12</li>
+                      <li>Textbook p569-582</li>
+                      <li><a href="materials/check_regression_assumptions.pdf">Checking Linear Regression Assumptions</a></li>
+                    </ol>
+                  </td>
+                  <td></td>
+                  <td></td>
                 </tr>
   </tbody>
 </table>
