--- a/index.html
+++ b/index.html
@@ -1344,6 +1344,19 @@
                   <td></td>
                   <td></td>
                 </tr>
+
+                <tr class="warning">
+                  <td>Tue Dec 6</td>
+                  <td>Lab 9</td>
+                  <td>
+                    Suggested Readings:
+                    <ol>
+                      <li><a href="lab/Lab9_3011_F22.pdf">Lab 9 Handout</a></li>
+                    </ol>
+                  </td>
+                  <td></td>
+                  <td></td>
+                  </tr>
   </tbody>
 </table>
 </div> 
