--- a/index.html
+++ b/index.html
@@ -1354,8 +1354,34 @@
                       <li><a href="lab/Lab9_3011_F22.pdf">Lab 9 Handout</a></li>
                     </ol>
                   </td>
+                  <td>
+                    HW 8 Solution <b><font color="green">out</font></b>
+                  </td>
                   <td></td>
-                  <td></td>
+                  </tr>
+
+                  <tr>
+                    <td>Wed Dec 7</td>
+                    <td>
+                      Chapter 12: Regression Analysis
+                      <br>
+                      [<a href="slides/Chapter12.pdf">slides</a>]
+                      [<a href="code/chapter12.R">code</a>]
+                      <br>
+                      <br>
+                      Final Exam Review
+                    </td>
+                
+                    <td>
+                      Suggested Readings:
+                      <ol>
+                        <li>Handout Chapter 12</li>
+                        <li>Textbook p569-582</li>
+                        <li><a href="materials/check_regression_assumptions.pdf">Checking Linear Regression Assumptions</a></li>
+                      </ol>
+                    </td>
+                    <td></td>
+                    <td></td>
                   </tr>
   </tbody>
 </table>
