curve exam 2 grades; update wed plan

--- a/index.html
+++ b/index.html
@@ -1369,7 +1369,7 @@
                       [<a href="code/chapter12.R">code</a>]
                       <br>
                       <br>
-                      Final Exam Review
+                      Mid-term Exam 2 Q&A
                     </td>
                 
                     <td>
