update wed link

--- a/index.html
+++ b/index.html
@@ -1369,7 +1369,7 @@
                       [<a href="code/chapter12.R">code</a>]
                       <br>
                       <br>
-                      Mid-term Exam 2 Q&A
+                      <a href="https://campuswire.com/c/G50FDD740/feed/118">Mid-term Exam 2 Q&A</a>
                     </td>
                 
                     <td>
