add dec 9 schedule

--- a/index.html
+++ b/index.html
@@ -1383,6 +1383,24 @@
                     <td></td>
                     <td></td>
                   </tr>
+
+                  <tr>
+                    <td>Fri Dec 9</td>
+                    <td>
+                      Final Exam Review
+                    </td>
+                
+                    <td>
+                      <!-- Suggested Readings:
+                      <ol>
+                        <li><a href="">Final Exam Information</a></li>
+                      </ol> -->
+                    </td>
+                    <td></td>
+                    <td>
+                      
+                    </td>
+                  </tr>
   </tbody>
 </table>
 </div> 
