update final exam location

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
   <h3>Final Exam (30%)</h3>
   <p>
-    The final exam is cumulative. It will be on December 20, 5:00 pm - 7:00 pm, location TBD.
+    The final exam is cumulative. It will be on December 20, 5:00 pm - 7:00 pm, at Anderson 310.
   </p>
 </div>
 </div> 
