add exam 2 and final exams

--- a/index.html
+++ b/index.html
@@ -1151,6 +1151,10 @@
               <td>Thu Nov 17</td>
               <td>
                 Mid-term Exam 2
+                <br>
+                [<a href="exams/Exam2A_3011_F22.pdf">Exam 2A</a>]
+                [<a href="exams/Exam2B_3011_F22.pdf">Exam 2B</a>]
+                [<a href="exams/Exam2C_3011_F22.pdf">Exam 2C</a>]
               </td>
               <td>
                 <i class="fa fa-clock-o"></i> 5:00pm - 6:30pm<br>Anderson Hall 310
@@ -1459,6 +1463,10 @@
                     <td>Tue Dec 20</td>
                     <td>
                       Final Exam
+                      <br>
+                      [<a href="exams/FinalExamTypeA_3011_F22.pdf">Exam A</a>]
+                      [<a href="exams/FinalExamTypeB_3011_F22.pdf">Exam B</a>]
+                      [<a href="exams/FinalExamTypeC_3011_F22.pdf">Exam C</a>]
                     </td>
                     <td>
                       <i class="fa fa-clock-o"></i> 5:00pm - 7:00pm<br>Anderson Hall 310
